# adaptive_huffman_code

./: CMakeLists.txt  Makefile  PLAN.md  README  README.md  code  main.cpp
cmake/: ExternalDeps.cmake
include/: Node.h  Transmiter.h  Tree.h
src/: Node.cpp  Transmiter.cpp  Tree.cpp
tests/: BasicTest.cpp  CMakeLists.txt  NodeTests.cpp  TransmiterTests.cpp  TreeTests.cpp
